[package]
name = "day17"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"
common = { version = "0.1.0", path = "../common" }
derive_more = "0.99.17"
itertools = "0.10.5"
once_cell = "1.16.0"
shape_macro = { version = "0.1.0", path = "shape_macro" }
tqdm = "0.4.2"
